--- a/Photorama/Base.lproj/Main.storyboard
+++ b/Photorama/Base.lproj/Main.storyboard
@@ -22,19 +22,62 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="0mj-AR-gm9">
-                                <rect key="frame" x="16" y="64" width="343" height="603"/>
-                            </imageView>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="sTw-Kx-4Wh">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="2" minimumInteritemSpacing="2" id="J4N-Ec-qWk">
+                                    <size key="itemSize" width="90" height="90"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="2" minY="2" maxX="2" maxY="2"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="UICollectionViewCell" id="4Iv-z1-lzI" customClass="PhotoCollectionViewCell" customModule="Photorama" customModuleProvider="target">
+                                        <rect key="frame" x="2" y="2" width="90" height="90"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="90" height="90"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hSg-HI-Q6F">
+                                                    <rect key="frame" x="0.0" y="0.0" width="90" height="90"/>
+                                                </imageView>
+                                                <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="white" translatesAutoresizingMaskIntoConstraints="NO" id="dad-XE-mTj">
+                                                    <rect key="frame" x="35" y="35" width="20" height="20"/>
+                                                </activityIndicatorView>
+                                            </subviews>
+                                        </view>
+                                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="bottomMargin" secondItem="dad-XE-mTj" secondAttribute="bottom" constant="27" id="7o5-hZ-GiB"/>
+                                            <constraint firstItem="hSg-HI-Q6F" firstAttribute="leading" secondItem="4Iv-z1-lzI" secondAttribute="leading" id="8Xs-C3-BNM"/>
+                                            <constraint firstItem="dad-XE-mTj" firstAttribute="leading" secondItem="4Iv-z1-lzI" secondAttribute="leadingMargin" constant="27" id="Gn3-ah-yb0"/>
+                                            <constraint firstItem="hSg-HI-Q6F" firstAttribute="top" secondItem="4Iv-z1-lzI" secondAttribute="top" id="PyZ-KS-DT0"/>
+                                            <constraint firstAttribute="trailing" secondItem="hSg-HI-Q6F" secondAttribute="trailing" id="QjA-Th-ibn"/>
+                                            <constraint firstItem="dad-XE-mTj" firstAttribute="top" secondItem="4Iv-z1-lzI" secondAttribute="topMargin" constant="27" id="cVU-dm-Mj9"/>
+                                            <constraint firstAttribute="trailingMargin" secondItem="dad-XE-mTj" secondAttribute="trailing" constant="27" id="io6-Hq-yxX"/>
+                                            <constraint firstAttribute="bottom" secondItem="hSg-HI-Q6F" secondAttribute="bottom" id="jQh-De-e2G"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="imageView" destination="hSg-HI-Q6F" id="QLM-CR-KpO"/>
+                                            <outlet property="spinner" destination="dad-XE-mTj" id="IM4-on-u9j"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstAttribute="trailingMargin" secondItem="0mj-AR-gm9" secondAttribute="trailing" id="OEb-xw-pCK"/>
-                            <constraint firstItem="0mj-AR-gm9" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="aCp-yc-RQH"/>
-                            <constraint firstItem="0mj-AR-gm9" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="mqu-zD-Eup"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="0mj-AR-gm9" secondAttribute="bottom" id="tDP-hL-fJw"/>
+                            <constraint firstAttribute="bottom" secondItem="sTw-Kx-4Wh" secondAttribute="bottom" id="CP8-jI-kq1"/>
+                            <constraint firstAttribute="trailing" secondItem="sTw-Kx-4Wh" secondAttribute="trailing" id="Wkn-AQ-SQ0"/>
+                            <constraint firstItem="sTw-Kx-4Wh" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="bM8-VS-lSu"/>
+                            <constraint firstItem="sTw-Kx-4Wh" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="rJs-eZ-1vy"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="MZc-C0-CWs"/>
+                    <connections>
+                        <outlet property="collectionView" destination="sTw-Kx-4Wh" id="pig-in-tcg"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
