--- a/Photorama/Base.lproj/Main.storyboard
+++ b/Photorama/Base.lproj/Main.storyboard
@@ -42,25 +42,26 @@
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hSg-HI-Q6F">
                                                     <rect key="frame" x="0.0" y="0.0" width="90" height="90"/>
                                                 </imageView>
-                                                <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="white" translatesAutoresizingMaskIntoConstraints="NO" id="dad-XE-mTj">
+                                                <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="white" translatesAutoresizingMaskIntoConstraints="NO" id="EEW-ce-1ue">
                                                     <rect key="frame" x="35" y="35" width="20" height="20"/>
                                                 </activityIndicatorView>
                                             </subviews>
                                         </view>
                                         <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
-                                            <constraint firstAttribute="bottomMargin" secondItem="dad-XE-mTj" secondAttribute="bottom" constant="27" id="7o5-hZ-GiB"/>
-                                            <constraint firstItem="hSg-HI-Q6F" firstAttribute="leading" secondItem="4Iv-z1-lzI" secondAttribute="leading" id="8Xs-C3-BNM"/>
-                                            <constraint firstItem="dad-XE-mTj" firstAttribute="leading" secondItem="4Iv-z1-lzI" secondAttribute="leadingMargin" constant="27" id="Gn3-ah-yb0"/>
-                                            <constraint firstItem="hSg-HI-Q6F" firstAttribute="top" secondItem="4Iv-z1-lzI" secondAttribute="top" id="PyZ-KS-DT0"/>
-                                            <constraint firstAttribute="trailing" secondItem="hSg-HI-Q6F" secondAttribute="trailing" id="QjA-Th-ibn"/>
-                                            <constraint firstItem="dad-XE-mTj" firstAttribute="top" secondItem="4Iv-z1-lzI" secondAttribute="topMargin" constant="27" id="cVU-dm-Mj9"/>
-                                            <constraint firstAttribute="trailingMargin" secondItem="dad-XE-mTj" secondAttribute="trailing" constant="27" id="io6-Hq-yxX"/>
-                                            <constraint firstAttribute="bottom" secondItem="hSg-HI-Q6F" secondAttribute="bottom" id="jQh-De-e2G"/>
+                                            <constraint firstAttribute="bottomMargin" secondItem="EEW-ce-1ue" secondAttribute="bottom" constant="27" id="3Ra-Ya-V7w"/>
+                                            <constraint firstItem="hSg-HI-Q6F" firstAttribute="top" secondItem="4Iv-z1-lzI" secondAttribute="top" id="6oL-KJ-mU5"/>
+                                            <constraint firstAttribute="trailing" secondItem="hSg-HI-Q6F" secondAttribute="trailing" id="HEK-oD-CV0"/>
+                                            <constraint firstAttribute="trailingMargin" secondItem="EEW-ce-1ue" secondAttribute="trailing" constant="27" id="VvY-AU-o2v"/>
+                                            <constraint firstItem="EEW-ce-1ue" firstAttribute="leading" secondItem="4Iv-z1-lzI" secondAttribute="leadingMargin" constant="27" id="gHT-F9-6AF"/>
+                                            <constraint firstItem="hSg-HI-Q6F" firstAttribute="leading" secondItem="4Iv-z1-lzI" secondAttribute="leading" id="kLv-Dj-Bmd"/>
+                                            <constraint firstItem="EEW-ce-1ue" firstAttribute="top" secondItem="4Iv-z1-lzI" secondAttribute="topMargin" constant="27" id="o36-dK-ROb"/>
+                                            <constraint firstAttribute="bottom" secondItem="hSg-HI-Q6F" secondAttribute="bottom" id="xvi-Zp-sLw"/>
                                         </constraints>
                                         <connections>
                                             <outlet property="imageView" destination="hSg-HI-Q6F" id="QLM-CR-KpO"/>
-                                            <outlet property="spinner" destination="dad-XE-mTj" id="IM4-on-u9j"/>
+                                            <outlet property="spinner" destination="EEW-ce-1ue" id="0ey-Hb-bxt"/>
+                                            <segue destination="PXS-or-dwU" kind="show" identifier="ShowPhoto" id="8cI-Pq-uMV"/>
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
@@ -82,6 +83,38 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1076" y="137.18140929535232"/>
+        </scene>
+        <!--Photo Info View Controller-->
+        <scene sceneID="KNc-mF-27z">
+            <objects>
+                <viewController id="PXS-or-dwU" customClass="PhotoInfoViewController" customModule="Photorama" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="0fq-Jz-niG"/>
+                        <viewControllerLayoutGuide type="bottom" id="giM-ko-Hlz"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="ZH9-ig-WbS">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="m47-op-9XE">
+                                <rect key="frame" x="16" y="20" width="343" height="647"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="giM-ko-Hlz" firstAttribute="top" secondItem="m47-op-9XE" secondAttribute="bottom" id="GJC-y8-uzt"/>
+                            <constraint firstItem="m47-op-9XE" firstAttribute="top" secondItem="0fq-Jz-niG" secondAttribute="bottom" id="Ynp-uk-Yi6"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="m47-op-9XE" secondAttribute="trailing" id="hqe-B1-wWL"/>
+                            <constraint firstItem="m47-op-9XE" firstAttribute="leading" secondItem="ZH9-ig-WbS" secondAttribute="leadingMargin" id="nxz-oF-EYb"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="imageView" destination="m47-op-9XE" id="z6H-hd-lse"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="H74-PZ-L5h" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1912" y="132"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="rYU-Wy-UL1">
